--- a/LLMS/Build-An-LLM/Building-Attention-Mechanisms.ipynb
+++ b/LLMS/Build-An-LLM/Building-Attention-Mechanisms.ipynb
@@ -966,10 +966,338 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([2, 6, 3])\n"
+     ]
+    }
+   ],
+   "source": [
+    "batch = torch.stack((inputs, inputs), dim=0)\n",
+    "print(batch.shape)                #1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class CausalAttention(nn.Module):\n",
+    "    def __init__(self, d_in, d_out, context_length,\n",
+    "                dropout, qkv_bias=False):\n",
+    "        super().__init__()\n",
+    "        self.d_out = d_out\n",
+    "        self.W_query = nn.Linear(d_in, d_out, bias=qkv_bias)\n",
+    "        self.W_key   = nn.Linear(d_in, d_out, bias=qkv_bias)\n",
+    "        self.W_value = nn.Linear(d_in, d_out, bias=qkv_bias)\n",
+    "        self.dropout = nn.Dropout(dropout)            #1\n",
+    "        self.register_buffer(\n",
+    "           'mask',\n",
+    "           torch.triu(torch.ones(context_length, context_length),\n",
+    "           diagonal=1)\n",
+    "        )             #2\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        b, num_tokens, d_in = x.shape                   #3\n",
+    "        keys = self.W_key(x)\n",
+    "        queries = self.W_query(x)\n",
+    "        values = self.W_value(x)\n",
+    "\n",
+    "        attn_scores = queries @ keys.transpose(1, 2)   \n",
+    "        attn_scores.masked_fill_(                    #4\n",
+    "            self.mask.bool()[:num_tokens, :num_tokens], -torch.inf) \n",
+    "        attn_weights = torch.softmax(\n",
+    "            attn_scores / keys.shape[-1]**0.5, dim=-1\n",
+    "        )\n",
+    "        attn_weights = self.dropout(attn_weights)\n",
+    "\n",
+    "        context_vec = attn_weights @ values\n",
+    "        return context_vec"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### While all added code lines should be familiar at this point, we now added a self .register_buffer() call in the __init__ method. The use of register_buffer in PyTorch is not strictly necessary for all use cases but offers several advantages here. For instance, when we use the CausalAttention class in our LLM, buffers are automatically moved to the appropriate device (CPU or GPU) along with our model, which will be relevant when training our LLM. This means we don’t need to manually ensure these tensors are on the same device as your model parameters, avoiding device mismatch errors."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "context_vecs.shape: torch.Size([2, 6, 2])\n"
+     ]
+    }
+   ],
+   "source": [
+    "torch.manual_seed(123)\n",
+    "context_length = batch.shape[1]\n",
+    "ca = CausalAttention(d_in, d_out, context_length, 0.0)\n",
+    "context_vecs = ca(batch)\n",
+    "print(\"context_vecs.shape:\", context_vecs.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Extending single-head attention to multi-head attention\n",
+    "\n",
+    "#### Our final step will be to extend the previously implemented causal attention class over multiple heads. This is also called multi-head attention.\n",
+    "\n",
+    "#### The term “multi-head” refers to dividing the attention mechanism into multiple “heads,” each operating independently. In this context, a single causal attention module can be considered single-head attention, where there is only one set of attention weights processing the input sequentially.\n",
+    "\n",
+    "#### We will tackle this expansion from causal attention to multi-head attention. First, we will intuitively build a multi-head attention module by stacking multiple CausalAttention modules. Then we will then implement the same multi-head attention module in a more complicated but more computationally efficient way.\n",
+    "\n",
+    "##  Stacking multiple single-head attention layers\n",
+    "\n",
+    "#### In practical terms, implementing multi-head attention involves creating multiple instances of the self-attention mechanism (see figure 3.18), each with its own weights, and then combining their outputs. Using multiple instances of the self-attention mechanism can be computationally intensive, but it’s crucial for the kind of complex pattern recognition that models like transformer-based LLMs are known for."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class MultiHeadAttentionWrapper(nn.Module):\n",
+    "    def __init__(self, d_in, d_out, context_length,\n",
+    "                 dropout, num_heads, qkv_bias=False):\n",
+    "        super().__init__()\n",
+    "        self.heads = nn.ModuleList(\n",
+    "            [CausalAttention(\n",
+    "                 d_in, d_out, context_length, dropout, qkv_bias\n",
+    "             ) \n",
+    "             for _ in range(num_heads)]\n",
+    "        )\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        return torch.cat([head(x) for head in self.heads], dim=-1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[[-0.4519,  0.2216,  0.4772,  0.1063],\n",
+      "         [-0.5874,  0.0058,  0.5891,  0.3257],\n",
+      "         [-0.6300, -0.0632,  0.6202,  0.3860],\n",
+      "         [-0.5675, -0.0843,  0.5478,  0.3589],\n",
+      "         [-0.5526, -0.0981,  0.5321,  0.3428],\n",
+      "         [-0.5299, -0.1081,  0.5077,  0.3493]],\n",
+      "\n",
+      "        [[-0.4519,  0.2216,  0.4772,  0.1063],\n",
+      "         [-0.5874,  0.0058,  0.5891,  0.3257],\n",
+      "         [-0.6300, -0.0632,  0.6202,  0.3860],\n",
+      "         [-0.5675, -0.0843,  0.5478,  0.3589],\n",
+      "         [-0.5526, -0.0981,  0.5321,  0.3428],\n",
+      "         [-0.5299, -0.1081,  0.5077,  0.3493]]], grad_fn=<CatBackward0>)\n",
+      "context_vecs.shape: torch.Size([2, 6, 4])\n"
+     ]
+    }
+   ],
+   "source": [
+    "torch.manual_seed(123)\n",
+    "context_length = batch.shape[1] # This is the number of tokens\n",
+    "d_in, d_out = 3, 2\n",
+    "mha = MultiHeadAttentionWrapper(\n",
+    "    d_in, d_out, context_length, 0.0, num_heads=2\n",
+    ")\n",
+    "context_vecs = mha(batch)\n",
+    "\n",
+    "print(context_vecs)\n",
+    "print(\"context_vecs.shape:\", context_vecs.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### The first dimension of the resulting context_vecs tensor is 2 since we have two input texts (the input texts are duplicated, which is why the context vectors are exactly the same for those). The second dimension refers to the 6 tokens in each input. The third dimension refers to the four-dimensional embedding of each token."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class MultiHeadAttention(nn.Module):\n",
+    "    def __init__(self, d_in, d_out, \n",
+    "                 context_length, dropout, num_heads, qkv_bias=False):\n",
+    "        super().__init__()\n",
+    "        assert (d_out % num_heads == 0), \\\n",
+    "            \"d_out must be divisible by num_heads\"\n",
+    "\n",
+    "        self.d_out = d_out\n",
+    "        self.num_heads = num_heads\n",
+    "        self.head_dim = d_out // num_heads    #1\n",
+    "        self.W_query = nn.Linear(d_in, d_out, bias=qkv_bias)\n",
+    "        self.W_key = nn.Linear(d_in, d_out, bias=qkv_bias)\n",
+    "        self.W_value = nn.Linear(d_in, d_out, bias=qkv_bias)\n",
+    "        self.out_proj = nn.Linear(d_out, d_out)    #2\n",
+    "        self.dropout = nn.Dropout(dropout)\n",
+    "        self.register_buffer(\n",
+    "            \"mask\",\n",
+    "            torch.triu(torch.ones(context_length, context_length),\n",
+    "                       diagonal=1)\n",
+    "        )\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        b, num_tokens, d_in = x.shape\n",
+    "        keys = self.W_key(x)         #3\n",
+    "        queries = self.W_query(x)    #3\n",
+    "        values = self.W_value(x)     #3\n",
+    "\n",
+    "        keys = keys.view(b, num_tokens, self.num_heads, self.head_dim)       #4\n",
+    "        values = values.view(b, num_tokens, self.num_heads, self.head_dim)  \n",
+    "        queries = queries.view(                                             \n",
+    "            b, num_tokens, self.num_heads, self.head_dim                    \n",
+    "        )                                                                   \n",
+    "\n",
+    "        keys = keys.transpose(1, 2)          #5\n",
+    "        queries = queries.transpose(1, 2)    #5\n",
+    "        values = values.transpose(1, 2)      #5\n",
+    "\n",
+    "        attn_scores = queries @ keys.transpose(2, 3)   #6\n",
+    "        mask_bool = self.mask.bool()[:num_tokens, :num_tokens]    #7\n",
+    "\n",
+    "        attn_scores.masked_fill_(mask_bool, -torch.inf)     #8\n",
+    "\n",
+    "        attn_weights = torch.softmax(\n",
+    "            attn_scores / keys.shape[-1]**0.5, dim=-1)\n",
+    "        attn_weights = self.dropout(attn_weights)\n",
+    "\n",
+    "        context_vec = (attn_weights @ values).transpose(1, 2)   #9\n",
+    " #10\n",
+    "        context_vec = context_vec.contiguous().view(\n",
+    "            b, num_tokens, self.d_out\n",
+    "        )\n",
+    "        context_vec = self.out_proj(context_vec)    #11\n",
+    "        return context_vec"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = torch.tensor([[[[0.2745, 0.6584, 0.2775, 0.8573],    #1\n",
+    "                    [0.8993, 0.0390, 0.9268, 0.7388],\n",
+    "                    [0.7179, 0.7058, 0.9156, 0.4340]],\n",
+    "\n",
+    "                   [[0.0772, 0.3565, 0.1479, 0.5331],\n",
+    "                    [0.4066, 0.2318, 0.4545, 0.9737],\n",
+    "                    [0.4606, 0.5159, 0.4220, 0.5786]]]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[[[1.3208, 1.1631, 1.2879],\n",
+      "          [1.1631, 2.2150, 1.8424],\n",
+      "          [1.2879, 1.8424, 2.0402]],\n",
+      "\n",
+      "         [[0.4391, 0.7003, 0.5903],\n",
+      "          [0.7003, 1.3737, 1.0620],\n",
+      "          [0.5903, 1.0620, 0.9912]]]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(a @ a.transpose(2, 3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "First head:\n",
+      " tensor([[1.3208, 1.1631, 1.2879],\n",
+      "        [1.1631, 2.2150, 1.8424],\n",
+      "        [1.2879, 1.8424, 2.0402]])\n",
+      "\n",
+      "Second head:\n",
+      " tensor([[0.4391, 0.7003, 0.5903],\n",
+      "        [0.7003, 1.3737, 1.0620],\n",
+      "        [0.5903, 1.0620, 0.9912]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "first_head = a[0, 0, :, :]\n",
+    "first_res = first_head @ first_head.T\n",
+    "print(\"First head:\\n\", first_res)\n",
+    "\n",
+    "second_head = a[0, 1, :, :]\n",
+    "second_res = second_head @ second_head.T\n",
+    "print(\"\\nSecond head:\\n\", second_res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[[0.3190, 0.4858],\n",
+      "         [0.2943, 0.3897],\n",
+      "         [0.2856, 0.3593],\n",
+      "         [0.2693, 0.3873],\n",
+      "         [0.2639, 0.3928],\n",
+      "         [0.2575, 0.4028]],\n",
+      "\n",
+      "        [[0.3190, 0.4858],\n",
+      "         [0.2943, 0.3897],\n",
+      "         [0.2856, 0.3593],\n",
+      "         [0.2693, 0.3873],\n",
+      "         [0.2639, 0.3928],\n",
+      "         [0.2575, 0.4028]]], grad_fn=<ViewBackward0>)\n",
+      "context_vecs.shape: torch.Size([2, 6, 2])\n"
+     ]
+    }
+   ],
+   "source": [
+    "torch.manual_seed(123)\n",
+    "batch_size, context_length, d_in = batch.shape\n",
+    "d_out = 2\n",
+    "mha = MultiHeadAttention(d_in, d_out, context_length, 0.0, num_heads=2)\n",
+    "context_vecs = mha(batch)\n",
+    "print(context_vecs)\n",
+    "print(\"context_vecs.shape:\", context_vecs.shape)"
+   ]
   }
  ],
  "metadata": {
